--- a/.github/workflows/test_and_publish.yaml
+++ b/.github/workflows/test_and_publish.yaml
@@ -21,10 +21,10 @@ jobs:
     - name: Tests
       run: python3 -m unittest discover
     - name: Install pypa/build
-      run: python -m pip install build --user
+      run: python -m pip install wheel
     - name: Build a binary wheel and a source tarball
-      run: python -m build --sdist --wheel --outdir dist/.
-    
+      run: python -m setup.py bdist_wheel
+        
     - name: Publish distribution to Test PyPI
       uses: pypa/gh-action-pypi-publish@master
       with:
