--- a/.github/workflows/test_and_publish.yaml
+++ b/.github/workflows/test_and_publish.yaml
@@ -23,7 +23,7 @@ jobs:
     - name: Install pypa/build
       run: python -m pip install wheel
     - name: Build a binary wheel and a source tarball
-      run: python -m setup.py bdist_wheel
+      run: python -m setup bdist_wheel
         
     - name: Publish distribution to Test PyPI
       uses: pypa/gh-action-pypi-publish@master
