--- a/.github/workflows/test_and_publish.yaml
+++ b/.github/workflows/test_and_publish.yaml
@@ -21,9 +21,9 @@ jobs:
     - name: Tests
       run: python3 -m unittest discover
     - name: Install pypa/build
-      run: python -m pip install wheel
+      run: python -m pip install build --user
     - name: Build a binary wheel and a source tarball
-      run: python -m setup bdist_wheel
+      run: python -m build --sdist --wheel --outdir dist/.
         
     - name: Publish distribution to Test PyPI
       uses: pypa/gh-action-pypi-publish@master
